[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/Stage2 background - DGUmarket.png" type="Texture" id=1]
[ext_resource path="res://assets/Stage2 tilemap - DGUmarket.png" type="Texture" id=2]
[ext_resource path="res://assets/Arcade fast flow1.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/TimerLabel.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/Socore_counter.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UserInterface/Top_Bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Immunity_gauge_feverMeff2.png" type="Texture" id=9]
[ext_resource path="res://assets/Scorelabel_theme.tres" type="Theme" id=10]
[ext_resource path="res://assets/Timer_theme.tres" type="Theme" id=11]
[ext_resource path="res://src/UserInterface/Interface.gd" type="Script" id=12]
[ext_resource path="res://src/Countdown_timer/PauseMenuLayer.gd" type="Script" id=13]
[ext_resource path="res://src/Countdown_timer/BgmOnOffbtn.gd" type="Script" id=14]
[ext_resource path="res://assets/bgmbt.png" type="Texture" id=15]
[ext_resource path="res://assets/Immunity_gauge_feverMeff1.png" type="Texture" id=16]
[ext_resource path="res://assets/Immunity_gauge_feverM.png" type="Texture" id=17]
[ext_resource path="res://assets/Immunity_gauge_bg.png" type="Texture" id=18]
[ext_resource path="res://assets/Immunity_gauge_fill.png" type="Texture" id=19]
[ext_resource path="res://assets/restartbarbt.png" type="Texture" id=20]
[ext_resource path="res://assets/volumncontrolbt.png" type="Texture" id=21]
[ext_resource path="res://assets/exitbt.png" type="Texture" id=22]
[ext_resource path="res://assets/Pausemenu.png" type="Texture" id=23]
[ext_resource path="res://assets/pausebt.png" type="Texture" id=24]
[ext_resource path="res://assets/resumebarbt.png" type="Texture" id=25]

[sub_resource type="TileSet" id=1]
0/name = "stage2"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 210, 210 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 1, 1 )
0/autotile/tile_size = Vector2( 70, 70 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="TileSet" id=3]
0/name = "Stage2 tilemap - DGUmarket.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 70, 70, 70, 70 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "def",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 9 ) ],
"loop": true,
"name": "fever",
"speed": 2.0
} ]

[node name="Stage2" type="Node2D"]

[node name="Stage2 background - DGUmarket" type="TextureRect" parent="."]
margin_top = 64.0
margin_right = 1984.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 2848, 240 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage2 background - DGUmarket2" type="TextureRect" parent="."]
margin_left = 1984.0
margin_top = 64.0
margin_right = 3968.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 2848, 240 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage2 background - DGUmarket3" type="TextureRect" parent="."]
margin_left = 3968.0
margin_top = 64.0
margin_right = 5952.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 2848, 240 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_layer = 4
collision_mask = 3
format = 1
tile_data = PoolIntArray( 524288, 0, 0, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 1, 524299, 0, 1, 524300, 0, 1, 524301, 0, 1, 524302, 0, 1, 524303, 0, 1, 524304, 0, 1, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 524308, 0, 1, 524309, 0, 1, 524310, 0, 1, 524311, 0, 1, 524312, 0, 1, 524313, 0, 1, 524314, 0, 1, 524315, 0, 1, 524316, 0, 1, 524317, 0, 1, 524318, 0, 1, 524319, 0, 1, 524320, 0, 1, 524321, 0, 1, 524322, 0, 1, 524323, 0, 1, 524324, 0, 1, 524325, 0, 1, 524326, 0, 1, 524327, 0, 1, 524328, 0, 1, 524329, 0, 1, 524330, 0, 1, 524331, 0, 1, 524332, 0, 1, 524333, 0, 1, 524334, 0, 1, 524335, 0, 1, 524336, 0, 1, 524337, 0, 1, 524338, 0, 1, 524339, 0, 1, 524340, 0, 1, 524341, 0, 1, 524342, 0, 1, 524343, 0, 1, 524344, 0, 1, 524345, 0, 1, 524346, 0, 1, 524347, 0, 1, 524348, 0, 1, 524349, 0, 1, 524350, 0, 1, 524351, 0, 1, 524352, 0, 1, 524353, 0, 1, 524354, 0, 1, 524355, 0, 1, 524356, 0, 1, 524357, 0, 1, 524358, 0, 1, 524359, 0, 1, 524360, 0, 1, 524361, 0, 1, 524362, 0, 1, 524363, 0, 1, 524364, 0, 1, 524365, 0, 1, 524366, 0, 1, 524367, 0, 1, 524368, 0, 1, 524369, 0, 1, 524370, 0, 1, 524371, 0, 1, 524372, 0, 1, 524373, 0, 1, 524374, 0, 1, 524375, 0, 1, 524376, 0, 1, 524377, 0, 1, 524378, 0, 1, 524379, 0, 1, 524380, 0, 2, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 65537, 589856, 0, 65537, 589857, 0, 65537, 589858, 0, 65537, 589859, 0, 65537, 589860, 0, 65537, 589861, 0, 65537, 589862, 0, 65537, 589863, 0, 65537, 589864, 0, 65537, 589865, 0, 65537, 589866, 0, 65537, 589867, 0, 65537, 589868, 0, 65537, 589869, 0, 65537, 589870, 0, 65537, 589871, 0, 65537, 589872, 0, 65537, 589873, 0, 65537, 589874, 0, 65537, 589875, 0, 65537, 589876, 0, 65537, 589877, 0, 65537, 589878, 0, 65537, 589879, 0, 65537, 589880, 0, 65537, 589881, 0, 65537, 589882, 0, 65537, 589883, 0, 65537, 589884, 0, 65537, 589885, 0, 65537, 589886, 0, 65537, 589887, 0, 65537, 589888, 0, 65537, 589889, 0, 65537, 589890, 0, 65537, 589891, 0, 65537, 589892, 0, 65537, 589893, 0, 65537, 589894, 0, 65537, 589895, 0, 65537, 589896, 0, 65537, 589897, 0, 65537, 589898, 0, 65537, 589899, 0, 65537, 589900, 0, 65537, 589901, 0, 65537, 589902, 0, 65537, 589903, 0, 65537, 589904, 0, 65537, 589905, 0, 65537, 589906, 0, 65537, 589907, 0, 65537, 589908, 0, 65537, 589909, 0, 65537, 589910, 0, 65537, 589911, 0, 65537, 589912, 0, 65537, 589913, 0, 65537, 589914, 0, 65537, 589915, 0, 65537, 589916, 0, 65538, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 655391, 0, 65537, 655392, 0, 65537, 655393, 0, 65537, 655394, 0, 65537, 655395, 0, 65537, 655396, 0, 65537, 655397, 0, 65537, 655398, 0, 65537, 655399, 0, 65537, 655400, 0, 65537, 655401, 0, 65537, 655402, 0, 65537, 655403, 0, 65537, 655404, 0, 65537, 655405, 0, 65537, 655406, 0, 65537, 655407, 0, 65537, 655408, 0, 65537, 655409, 0, 65537, 655410, 0, 65537, 655411, 0, 65537, 655412, 0, 65537, 655413, 0, 65537, 655414, 0, 65537, 655415, 0, 65537, 655416, 0, 65537, 655417, 0, 65537, 655418, 0, 65537, 655419, 0, 65537, 655420, 0, 65537, 655421, 0, 65537, 655422, 0, 65537, 655423, 0, 65537, 655424, 0, 65537, 655425, 0, 65537, 655426, 0, 65537, 655427, 0, 65537, 655428, 0, 65537, 655429, 0, 65537, 655430, 0, 65537, 655431, 0, 65537, 655432, 0, 65537, 655433, 0, 65537, 655434, 0, 65537, 655435, 0, 65537, 655436, 0, 65537, 655437, 0, 65537, 655438, 0, 65537, 655439, 0, 65537, 655440, 0, 65537, 655441, 0, 65537, 655442, 0, 65537, 655443, 0, 65537, 655444, 0, 65537, 655445, 0, 65537, 655446, 0, 65537, 655447, 0, 65537, 655448, 0, 65537, 655449, 0, 65537, 655450, 0, 65537, 655451, 0, 65537, 655452, 0, 65538, 720896, 0, 131072, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 131073, 720908, 0, 131073, 720909, 0, 131073, 720910, 0, 131073, 720911, 0, 131073, 720912, 0, 131073, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 0, 131073, 720917, 0, 131073, 720918, 0, 131073, 720919, 0, 131073, 720920, 0, 131073, 720921, 0, 131073, 720922, 0, 131073, 720923, 0, 131073, 720924, 0, 131073, 720925, 0, 131073, 720926, 0, 131073, 720927, 0, 131073, 720928, 0, 131073, 720929, 0, 131073, 720930, 0, 131073, 720931, 0, 131073, 720932, 0, 131073, 720933, 0, 131073, 720934, 0, 131073, 720935, 0, 131073, 720936, 0, 131073, 720937, 0, 131073, 720938, 0, 131073, 720939, 0, 131073, 720940, 0, 131073, 720941, 0, 131073, 720942, 0, 131073, 720943, 0, 131073, 720944, 0, 131073, 720945, 0, 131073, 720946, 0, 131073, 720947, 0, 131073, 720948, 0, 131073, 720949, 0, 131073, 720950, 0, 131073, 720951, 0, 131073, 720952, 0, 131073, 720953, 0, 131073, 720954, 0, 131073, 720955, 0, 131073, 720956, 0, 131073, 720957, 0, 131073, 720958, 0, 131073, 720959, 0, 131073, 720960, 0, 131073, 720961, 0, 131073, 720962, 0, 131073, 720963, 0, 131073, 720964, 0, 131073, 720965, 0, 131073, 720966, 0, 131073, 720967, 0, 131073, 720968, 0, 131073, 720969, 0, 131073, 720970, 0, 131073, 720971, 0, 131073, 720972, 0, 131073, 720973, 0, 131073, 720974, 0, 131073, 720975, 0, 131073, 720976, 0, 131073, 720977, 0, 131073, 720978, 0, 131073, 720979, 0, 131073, 720980, 0, 131073, 720981, 0, 131073, 720982, 0, 131073, 720983, 0, 131073, 720984, 0, 131073, 720985, 0, 131073, 720986, 0, 131073, 720987, 0, 131073, 720988, 0, 131074 )

[node name="Collision" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 3 )
collision_layer = 4
collision_mask = 3
format = 1
tile_data = PoolIntArray( 524288, 0, 0, 524289, 0, 0, 524379, 0, 0, 524380, 0, 0, 589824, 0, 0, 589825, 0, 0, 589915, 0, 0, 589916, 0, 0, 655360, 0, 0, 655361, 0, 0, 655451, 0, 0, 655452, 0, 0, 720896, 0, 0, 720897, 0, 0, 720987, 0, 0, 720988, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 128, 616 )
scale = Vector2( 0.6, 0.6 )
speed = Vector2( 100, 0 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -213.333, -1026.67 )
scale = Vector2( 1.66667, 1.66667 )
stream = ExtResource( 3 )
volume_db = -3.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -213.333, -1026.67 )
scale = Vector2( 1.66667, 1.66667 )
offset = Vector2( 640, 385 )
current = true

[node name="Interface" type="Control" parent="Player/Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topbar" parent="Player/Camera2D/Interface" instance=ExtResource( 8 )]
anchor_right = 1.0
margin_bottom = 16.0

[node name="TextureProgress" type="TextureProgress" parent="Player/Camera2D/Interface"]
margin_left = 46.3669
margin_top = 56.0465
margin_right = 375.367
margin_bottom = 106.047
value = 50.0
texture_progress = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Immunity_gauge_feverM" type="TextureRect" parent="Player/Camera2D/Interface"]
visible = false
margin_top = 37.0
margin_right = 416.0
margin_bottom = 123.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Immunity_gauge" type="TextureRect" parent="Player/Camera2D/Interface"]
margin_top = 37.2693
margin_right = 416.0
margin_bottom = 123.269
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player/Camera2D/Interface"]
position = Vector2( 208, 80 )
frames = SubResource( 4 )
animation = "def"

[node name="Immunity_Bar_Label" type="Label" parent="Player/Camera2D/Interface"]
margin_left = 56.0
margin_top = 8.0
margin_right = 245.0
margin_bottom = 52.0
theme = ExtResource( 10 )
text = "면역 게이지"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_counter" parent="Player/Camera2D/Interface" instance=ExtResource( 7 )]
margin_left = 824.0
margin_right = 1124.0

[node name="TimerLabel" type="RichTextLabel" parent="Player/Camera2D/Interface"]
margin_left = 584.0
margin_top = 24.0
margin_right = 768.0
margin_bottom = 128.0
theme = ExtResource( 11 )
custom_colors/default_color = Color( 0.588235, 0.654902, 0.654902, 1 )
text = "90"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Player/Camera2D/Interface/TimerLabel"]
autostart = true

[node name="Pausebtningamelayer" type="CanvasLayer" parent="Player/Camera2D/Interface"]

[node name="Pausebtn" type="TextureButton" parent="Player/Camera2D/Interface/Pausebtningamelayer"]
margin_left = 1164.0
margin_top = 16.0
margin_right = 1256.0
margin_bottom = 109.0
texture_normal = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuLayer" type="Control" parent="Player/Camera2D/Interface/Pausebtningamelayer"]
pause_mode = 2
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer"]
anchor_right = 1.008
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -14.24
margin_bottom = 52.0
color = Color( 0.0666667, 0.054902, 0.0627451, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause메뉴화면" type="Sprite" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay"]
pause_mode = 2
position = Vector2( 638.236, 382.482 )
scale = Vector2( 0.953547, 0.851991 )
texture = ExtResource( 23 )

[node name="HBoxContainer" type="HBoxContainer" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면"]
anchor_left = 0.195
anchor_top = 0.181
anchor_right = 0.899
anchor_bottom = 0.429
margin_left = -240.75
margin_top = -297.202
margin_right = -250.55
margin_bottom = -303.418
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgmOnOffbtn" type="TextureButton" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/HBoxContainer"]
margin_right = 142.0
margin_bottom = 153.0
size_flags_horizontal = 12
size_flags_vertical = 15
size_flags_stretch_ratio = 3.75
texture_normal = ExtResource( 15 )
script = ExtResource( 14 )

[node name="VolumnControlbtn" type="TextureButton" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/HBoxContainer"]
margin_left = 142.0
margin_right = 307.0
margin_bottom = 153.0
size_flags_horizontal = 12
size_flags_vertical = 12
texture_normal = ExtResource( 21 )
stretch_mode = 2

[node name="PauseControlMenu" type="VBoxContainer" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면"]
pause_mode = 2
anchor_left = -0.772
anchor_top = -0.149
anchor_right = 2.066
anchor_bottom = 1.198
margin_left = 238.4
margin_top = 51.658
margin_right = -816.7
margin_bottom = -514.116
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resumebtn" type="Button" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu"]
margin_right = 222.0
margin_bottom = 97.0
icon = ExtResource( 25 )
flat = true

[node name="Restartbtn" type="Button" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu"]
margin_top = 101.0
margin_right = 222.0
margin_bottom = 198.0
icon = ExtResource( 20 )
flat = true

[node name="Exitbtn" type="Button" parent="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu"]
margin_top = 202.0
margin_right = 222.0
margin_bottom = 299.0
icon = ExtResource( 22 )
flat = true

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 1535.84, 707.427 )
scale = Vector2( 0.6, 0.6 )
enemymod = 2

[node name="Enemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( -948.361, 599.74 )
scale = Vector2( 0.6, 0.6 )
enemymod = 1

[node name="Enemy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 2674.39, 699.314 )
scale = Vector2( 0.6, 0.6 )

[node name="Enemy4" parent="." instance=ExtResource( 4 )]
position = Vector2( -2844.78, 772 )
scale = Vector2( 0.6, 0.6 )
enemymod = 1

[node name="Enemy5" parent="." instance=ExtResource( 4 )]
position = Vector2( -2002.29, 587.2 )
scale = Vector2( 0.6, 0.6 )
enemymod = 1

[node name="Enemy6" parent="." instance=ExtResource( 4 )]
position = Vector2( 4345.34, 558.4 )
scale = Vector2( 0.6, 0.6 )
enemymod = 2

[node name="Enemy7" parent="." instance=ExtResource( 4 )]
position = Vector2( 4910.52, 691.2 )
scale = Vector2( 0.6, 0.6 )

[node name="Enemy8" parent="." instance=ExtResource( 4 )]
position = Vector2( 5573.33, 587.2 )
scale = Vector2( 0.6, 0.6 )
enemymod = 2

[node name="Enemy9" parent="." instance=ExtResource( 4 )]
position = Vector2( 2116.29, 600.06 )
scale = Vector2( 0.6, 0.6 )

[node name="Enemy10" parent="." instance=ExtResource( 4 )]
position = Vector2( -3407.16, 570.94 )
scale = Vector2( 0.6, 0.6 )
enemymod = 1

[node name="Enemy11" parent="." instance=ExtResource( 4 )]
position = Vector2( -4747.64, 630.391 )
scale = Vector2( 0.6, 0.6 )
enemymod = 1

[node name="Enemy12" parent="." instance=ExtResource( 4 )]
position = Vector2( 3519.9, 616 )
scale = Vector2( 0.6, 0.6 )
enemymod = 2
[connection signal="immunity_feverM" from="Player" to="Player/Camera2D/Interface" method="_on_Player_immunity_feverM"]
[connection signal="immunity_nonfeverM" from="Player" to="Player/Camera2D/Interface" method="_on_Player_immunity_nonfeverM"]
[connection signal="infever" from="Player" to="Enemy" method="_on_Player_infever"]
[connection signal="outfever" from="Player" to="Enemy" method="_on_Player_outfever"]
[connection signal="timeout" from="Player/Camera2D/Interface/TimerLabel/Timer" to="Player/Camera2D/Interface/TimerLabel" method="_on_Timer_timeout"]
[connection signal="button_up" from="Player/Camera2D/Interface/Pausebtningamelayer/Pausebtn" to="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer" method="_on_Pausebtn_button_up"]
[connection signal="pressed" from="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/HBoxContainer/BgmOnOffbtn" to="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer" method="_on_BgmOnOffbtn_pressed"]
[connection signal="button_up" from="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Resumebtn" to="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer" method="_on_Resumebtn_button_up"]
[connection signal="pressed" from="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Resumebtn" to="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer" method="_on_Resumebtn_pressed"]
[connection signal="button_up" from="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Restartbtn" to="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer" method="_on_Restartbtn_button_up"]
[connection signal="button_up" from="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Exitbtn" to="Player/Camera2D/Interface/Pausebtningamelayer/PauseMenuLayer" method="_on_Exitbtn_button_up"]
[connection signal="changescore" from="Enemy" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy2" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy2" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy3" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy3" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy4" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy4" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy5" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy5" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy6" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy6" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy7" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy7" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy8" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy8" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy9" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy9" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy10" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy10" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy11" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy11" to="Player" method="_on_Enemy_enemykilled"]
[connection signal="changescore" from="Enemy12" to="Player/Camera2D/Interface" method="_on_Enemy_changescore"]
[connection signal="enemykilled" from="Enemy12" to="Player" method="_on_Enemy_enemykilled"]
